objects/Veda_Court_Action__c.object
<CustomObject>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda CourtActions</relationshipLabel>
        <relationshipName>Veda_CourtActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>action_Date__c</fullName>
        <label>action Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>co_Borrower__c</fullName>
        <label>co Borrower</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>courtActionAmount__c</fullName>
        <label>courtActionAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>court_Action_Status_Code__c</fullName>
        <label>court Action Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>court_Action_Status_Date__c</fullName>
        <label>court Action Status Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>court_Action_Status__c</fullName>
        <label>court Action Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>court_Action_Type__c</fullName>
        <label>court Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>court_Type__c</fullName>
        <label>court Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditor_Currency_Code__c</fullName>
        <label>creditor Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditor__c</fullName>
        <label>creditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plaint_Number__c</fullName>
        <label>plaint Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship_Code__c</fullName>
        <label>relationship Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship__c</fullName>
        <label>relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Court Action</label>
    <nameField>
        <label>court Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda CourtActions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>